tests/paczka2/big_fuzzy/52005868.err
Error in line 3: Hd8sZvGi A897 57,2
Error in line 10: mNebcS3 A72 9,5
Error in line 13: mNebcS3 S809 10,7
Error in line 20: 3O8y A897 37,4
Error in line 32: 119UVz5 A701 99,8
Error in line 27: 1WgEoUu A897 83,6
Error in line 24: Hd8sZvGi A897 9,9
Error in line 43: S809 S809 15,8
Error in line 44: Hd8sZvGi S809 24,4
Error in line 47: 119UVz5 A897 92,1
Error in line 51: 3O8y A701 5,5
Error in line 55: 119UVz5 A701 8,6
Error in line 70: mNebcS3 A897 21,9
Error in line 86: ewH51p A701 15,5
Error in line 96: Hd8sZvGi A701 82,0
Error in line 93: S809 A72 0,4
Error in line 105: ewH51p A897 45,1
Error in line 87: 1WgEoUu S809 101,3
Error in line 107: ewH51p A701 23,0
Error in line 106: S809 A701 32,9
Error in line 119: mNebcS3 S809 67,2
Error in line 126: mNebcS3 A701 8,00
Error in line 127: S809 S809 268,08
Error in line 128: 3O8y S809 121,99
Error in line 121: S809 S809 60,0
Error in line 145: S809 A701 77,5
Error in line 153: S809 A72 -2,2
Error in line 155: ewH51p A897 238,57
Error in line 122: mNebcS3 A701 27,5
Error in line 148: 119UVz5 A897 10,7
Error in line 151: 1WgEoUu S809 33,8
Error in line 159: 1WgEoUu A897 66,8
Error in line 160: 1WgEoUu A701 73,1
Error in line 150: Hd8sZvGi A72 28,9
Error in line 163: Hd8sZvGi A701 38,5
Error in line 146: S809 A72 60,3
Error in line 158: 119UVz5 S809 27,1
Error in line 137: 3O8y A72 76,1
Error in line 162: 1WgEoUu A72 95,8
Error in line 161: mNebcS3 A701 44,3
Error in line 171: S809 S809 27,2
Error in line 179: 3O8y A897 -2,6
Error in line 182: Hd8sZvGi A72 127,5
Error in line 173: 3O8y A897 70,9
Error in line 188: Hd8sZvGi S809 4,0
Error in line 199: 1WgEoUu A897 41,4
Error in line 205: ewH51p A897 135,9
Error in line 227: 3O8y AO01 O,1
Error in line 231: Hd8sZvGi A701 9,6
Error in line 238: S809 A70& 35,5
Error in line 219: 119UVz5 A701 119,4
Error in line 239: 119UVz5 S809 10,6
Error in line 241: S809 A701 5,7
